setup list of dungeons, and example totals for one

--- a/index.html
+++ b/index.html
@@ -16,6 +16,46 @@
     />
   </head>
   <body>
+    <header>
+      <h2>Welcome to Gorgon Timers</h2>
+    </header>
+    <main>
+      <ul id="dungeon-list">
+        <lh>Click a dungeon name below to view chest timers</lh>
+        <strike>
+          <li class="dungeon-list-item"><a href="#">Serbule Sewers</a></li>
+          <li class="dungeon-list-item"><a href="#">Brain Bug Cave</a></li>
+          <li class="dungeon-list-item"><a href="#">Ranalon Den</a></li>
+          <li class="dungeon-list-item"><a href="#">Serbule Crypt</a></li>
+          <li class="dungeon-list-item">
+            <a href="#">Eltibule Crypt</a>
+          </li>
+        </strike>
+        <li class="dungeon-list-item">
+          <a href="#">
+            Goblin Dungeon <br />
+            <sup>
+              - Available/Total: <span id="goblin-totals-1">3h (6/6),</span>
+              <span id="goblin-totals-2">1h (2/2),</span>
+              <span id="goblin-totals-3">1h (1/1)</span></sup
+            >
+          </a>
+        </li>
+        <strike>
+          <li class="dungeon-list-item"><a href="#">Myconian Cave</a></li>
+          <li class="dungeon-list-item"><a href="#">Animal Nexus</a></li>
+          <li class="dungeon-list-item"><a href="#">Hogan's Basement</a></li>
+          <li class="dungeon-list-item"><a href="#">Yeti Cave</a></li>
+          <li class="dungeon-list-item"><a href="#">Fish Bowl Cavern</a></li>
+          <li class="dungeon-list-item"><a href="#">Borghild</a></li>
+          <li class="dungeon-list-item"><a href="#">Dark Chapel</a></li>
+          <li class="dungeon-list-item"><a href="#">Winter Nexus</a></li>
+          <li class="dungeon-list-item"><a href="#">Wolf Cave</a></li>
+          <li class="dungeon-list-item"><a href="#">Labyrinth</a></li>
+          <li class="dungeon-list-item"><a href="#">Amaluk Valley Cave</a></li>
+        </strike>
+      </ul>
+    </main>
     <script src="./script.js"></script>
   </body>
 </html>
