add resetAll func & added to buttons

--- a/index.html
+++ b/index.html
@@ -191,7 +191,12 @@
             >
               Loot All
             </button>
-            <button disabled style="width: 25%">Reset All</button>
+            <button
+              onclick="resetAll('GoblinDungeon', 'Pre-FogChests')"
+              style="width: 25%"
+            >
+              Reset All
+            </button>
           </div>
         </div>
         <div id="RedCrystal">
@@ -245,7 +250,12 @@
             >
               Loot All
             </button>
-            <button disabled style="width: 25%">Reset All</button>
+            <button
+              onclick="resetAll('GoblinDungeon', 'RedCrystal')"
+              style="width: 25%"
+            >
+              Reset All
+            </button>
           </div>
         </div>
         <div id="GreenCrystal">
@@ -279,7 +289,12 @@
             >
               Loot All
             </button>
-            <button disabled style="width: 25%">Reset All</button>
+            <button
+              onclick="resetAll('GoblinDungeon', 'GreenCrystal')"
+              style="width: 25%"
+            >
+              Reset All
+            </button>
           </div>
         </div>
       </section>
