add calculateAvailableChests func/interval

--- a/index.html
+++ b/index.html
@@ -34,11 +34,7 @@
         <li class="dungeon-list-item">
           <a href="#" onclick="showDungeon('GoblinDungeon')">
             Goblin Dungeon <br />
-            <sup>
-              - Available/Total: <span id="goblin-totals-1">3h (6/6),</span>
-              <span id="goblin-totals-2">1h (2/2),</span>
-              <span id="goblin-totals-3">1h (1/1)</span></sup
-            >
+            <sup><span id="GoblinDungeon-totals"></span></sup>
           </a>
         </li>
         <strike>
