add serbule sewers to HTML + dungeonArray

--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
     <main>
       <ul id="dungeon-list">
         <lh>Click a dungeon name below to view chest timers</lh>
+        <li class="dungeon-list-item">
+          <a href="#" onclick="showDungeon('SerbuleSewers')"
+            >Serbule Sewers<br />
+            <sup><span id="SerbuleSewers-totals"></span></sup
+          ></a>
+        </li>
         <strike>
-          <li class="dungeon-list-item"><a href="#">Serbule Sewers</a></li>
           <li class="dungeon-list-item"><a href="#">Brain Bug Cave</a></li>
           <li class="dungeon-list-item"><a href="#">Ranalon Den</a></li>
           <li class="dungeon-list-item"><a href="#">Serbule Crypt</a></li>
@@ -51,6 +56,37 @@
           <li class="dungeon-list-item"><a href="#">Amaluk Valley Cave</a></li>
         </strike>
       </ul>
+      <section id="SerbuleSewers" class="dnone dungeon-section">
+        <button onclick="showMainPage()">
+          <h3 style="color: black">&larr; Go back...</h3>
+        </button>
+        <h1>Serbule Sewers</h1>
+        <div id="SerbuleSewersOne">
+          <h3>One Lonely Chest</h3>
+          <ul class="dungeon-timer-list">
+            <li>
+              <h3>One</h3>
+              <p>
+                Resets in:
+                <span class="chest1remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-1-btn"
+                onclick="setLastLooted(`SerbuleSewers`,`SerbuleSewersOne`,`1`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-1-btn"
+                onclick="resetChest(`SerbuleSewers`,`SerbuleSewersOne`,`1`)"
+              >
+                Reset
+              </button>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section id="GoblinDungeon" class="dnone dungeon-section">
         <button onclick="showMainPage()">
           <h3 style="color: black">&larr; Go back...</h3>
