Add template for .dungeon-section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,72 @@
           <li class="dungeon-list-item"><a href="#">Amaluk Valley Cave</a></li>
         </strike>
       </ul>
+      <!-- TEMPLATE -->
+      <!-- <section id="DungeonName" class="dnone dungeon-section">
+        <button onclick="showMainPage()">
+          <h3 style="color: black">&larr; Go back...</h3>
+        </button>
+        <h1>Dungeon Name</h1>
+        <div id="ChestGroupName">
+          <h3>Chest Group Name</h3>
+          <ul class="dungeon-timer-list">
+            <li>
+              <h3>One</h3>
+              <p>
+                Resets in:
+                <span class="chest1remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-1-btn"
+                onclick="setLastLooted(`DungeonName`,`ChestGroupName`,`1`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-1-btn"
+                onclick="resetChest(`DungeonName`,`ChestGroupName`,`1`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>Two</h3>
+              <p>
+                Resets in:
+                <span class="chest2remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-2-btn"
+                onclick="setLastLooted(`DungeonName`,`ChestGroupName`,`2`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-2-btn"
+                onclick="resetChest(`DungeonName`,`ChestGroupName`,`2`)"
+              >
+                Reset
+              </button>
+            </li>
+          </ul>
+          <div style="display: flex; justify-content: space-evenly">
+            <button
+              onclick="lootAll('DungeonName', 'ChestGroupName')"
+              style="width: 25%"
+            >
+              Loot All
+            </button>
+            <button
+              onclick="resetAll('DungeonName', 'ChestGroupName')"
+              style="width: 25%"
+            >
+              Reset All
+            </button>
+          </div>
+        </div>
+      </section> -->
       <section id="SerbuleSewers" class="dnone dungeon-section">
         <button onclick="showMainPage()">
           <h3 style="color: black">&larr; Go back...</h3>
