--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
             <sup><span id="BrainBugCave-totals"></span></sup
           ></a>
         </li>
+        <li class="dungeon-list-item">
+          <a href="#" onclick="showDungeon('RanalonDen')"
+            >Ranalon Den<br />
+            <sup><span id="RanalonDen-totals"></span></sup
+          ></a>
+        </li>
         <strike>
-          <li class="dungeon-list-item"><a href="#">Ranalon Den</a></li>
           <li class="dungeon-list-item"><a href="#">Serbule Crypt</a></li>
           <li class="dungeon-list-item">
             <a href="#">Eltibule Crypt</a>
@@ -187,6 +192,91 @@
               </button>
             </li>
           </ul>
+        </div>
+      </section>
+      <section id="RanalonDen" class="dnone dungeon-section">
+        <button onclick="showMainPage()">
+          <h3 style="color: black">&larr; Go back...</h3>
+        </button>
+        <h1>Ranalon Den</h1>
+        <div id="WestNorthEast">
+          <h3>West - North - East</h3>
+          <ul class="dungeon-timer-list">
+            <li>
+              <h3>West</h3>
+              <p>
+                Resets in:
+                <span class="chest1remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-1-btn"
+                onclick="setLastLooted(`RanalonDen`,`WestNorthEast`,`1`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-1-btn"
+                onclick="resetChest(`RanalonDen`,`WestNorthEast`,`1`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>North</h3>
+              <p>
+                Resets in:
+                <span class="chest2remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-2-btn"
+                onclick="setLastLooted(`RanalonDen`,`WestNorthEast`,`2`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-2-btn"
+                onclick="resetChest(`RanalonDen`,`WestNorthEast`,`2`)"
+              >
+                Reset
+              </button>
+            </li>
+            <li>
+              <h3>East</h3>
+              <p>
+                Resets in:
+                <span class="chest3remaining">00:00:00</span>
+              </p>
+              <button
+                class="loot-chest-3-btn"
+                onclick="setLastLooted(`RanalonDen`,`WestNorthEast`,`3`)"
+              >
+                Loot
+              </button>
+              <button
+                disabled
+                class="reset-chest-3-btn"
+                onclick="resetChest(`RanalonDen`,`WestNorthEast`,`3`)"
+              >
+                Reset
+              </button>
+            </li>
+          </ul>
+          <div style="display: flex; justify-content: space-evenly">
+            <button
+              onclick="lootAll('RanalonDen', 'WestNorthEast')"
+              style="width: 25%"
+            >
+              Loot All
+            </button>
+            <button
+              onclick="resetAll('RanalonDen', 'WestNorthEast')"
+              style="width: 25%"
+            >
+              Reset All
+            </button>
+          </div>
         </div>
       </section>
       <section id="GoblinDungeon" class="dnone dungeon-section">
