adjust formatting of dungeon-list-items

--- a/index.html
+++ b/index.html
@@ -23,25 +23,29 @@
       <ul id="dungeon-list">
         <lh>Click a dungeon name below to view chest timers</lh>
         <li class="dungeon-list-item">
-          <a href="#" onclick="showDungeon('SerbuleSewers')"
-            >Serbule Sewers<br />
-            <sup><span id="SerbuleSewers-totals"></span></sup
-          ></a>
+          <a href="#" onclick="showDungeon('SerbuleSewers')">
+            Serbule Sewers<br />
+            <sup><span id="SerbuleSewers-totals"></span></sup>
+          </a>
         </li>
         <li class="dungeon-list-item">
           <a href="#" onclick="showDungeon('BrainBugCave')">
             Brain Bug Cave<br />
-            <sup><span id="BrainBugCave-totals"></span></sup
-          ></a>
+            <sup><span id="BrainBugCave-totals"></span></sup>
+          </a>
         </li>
         <li class="dungeon-list-item">
-          <a href="#" onclick="showDungeon('RanalonDen')"
-            >Ranalon Den<br />
-            <sup><span id="RanalonDen-totals"></span></sup
-          ></a>
+          <a href="#" onclick="showDungeon('RanalonDen')">
+            Ranalon Den<br />
+            <sup><span id="RanalonDen-totals"></span></sup>
+          </a>
         </li>
-        <li class="dungeon-list-item"><a href="#" onclick="showDungeon('SerbuleCrypt')">Serbule Crypt<br />
-            <sup><span id="SerbuleCrypt-totals"></span></a></li>
+        <li class="dungeon-list-item">
+          <a href="#" onclick="showDungeon('SerbuleCrypt')">
+            Serbule Crypt<br />
+            <sup><span id="SerbuleCrypt-totals"></span></sup>
+          </a>
+        </li>
         <li class="dungeon-list-item">
           <a href="#" onclick="showDungeon('GoblinDungeon')">
             Goblin Dungeon <br />
